# paxdemo

./: CMakeLists.txt  Dockerfile  README.md  audio.cpp  audio.opus  cpuinfo  main.cpp
generate/: generatevideoframes.py
